--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,3 +37,12 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+  mybatis-plus:
+    configuration:
+      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 开启SQL日志
+    global-config:
+      db-config:
+        id-type: auto # 主键自增策略
+        logic-delete-field: isDeleted # 逻辑删除字段
+        logic-not-delete-value: 0
+        logic-delete-value: 1
